[package]
name = "pong"
version = "0.1.0"
authors = ["Jonathon <jyallop21@gmail.com>"]
edition = "2018"

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
iced = { version = "0.3.0", features = ["canvas", "tokio", "debug"] }
rand = "0.8.4"
log = { version = "0.4.14", features = ["serde"] }
